Menu und DiscardPile kommentiert